--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,18 @@ services:
     - "8000:8000"
   volumes:
     - sqlite_pl_volume:/code/sqlitedb
+  depends_on:
+    - activemq
+  environment:
+      - ACTIVE_MQ_BROKER_URL=tcp://activemq:61616  # Add ActiveMQ broker URL
+ activemq:
+   image: webcenter/activemq:latest
+   ports:
+     - "61616:61616"
+     - "8161:8161"
+   environment:
+     ACTIVEMQ_ADMIN_LOGIN: admin
+     ACTIVEMQ_ADMIN_PASSWORD: admin
 
 volumes:
   sqlite_pl_volume:
