--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,11 +9,10 @@ services:
   depends_on:
     - activemq
   environment:
-      - ACTIVE_MQ_BROKER_URL=tcp://activemq:61616  # Add ActiveMQ broker URL
+      - ACTIVE_MQ_BROKER_URL=tcp://localhost:8161
  activemq:
    image: webcenter/activemq:latest
    ports:
-     - "61616:61616"
      - "8161:8161"
    environment:
      ACTIVEMQ_ADMIN_LOGIN: admin
