--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,13 +9,14 @@ services:
   depends_on:
     - activemq
   environment:
-      - ACTIVE_MQ_BROKER_URL=tcp://localhost:61616  # Add ActiveMQ broker URL
+      - ACTIVE_MQ_BROKER_URL=tcp://ls-api-development-activeMQ:61616  # Add ActiveMQ broker URL
  activemq:
    image: webcenter/activemq:latest
    ports:
      - "61616:61616"
      - "8161:8161"
    environment:
+     ACTIVEMQ_NAME: lsApiDevelopmentActiveMQ
      ACTIVEMQ_ADMIN_LOGIN: admin
      ACTIVEMQ_ADMIN_PASSWORD: admin
 
