--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,7 @@ services:
      - "61616:61616"
      - "8161:8161"
    environment:
+     ACTIVEMQ_NAME: lsApiDevelopmentActiveMQ
      ACTIVEMQ_ADMIN_LOGIN: admin
      ACTIVEMQ_ADMIN_PASSWORD: admin
 
