--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,14 +9,14 @@ services:
   depends_on:
     - activemq
   environment:
-      - ACTIVE_MQ_BROKER_URL=tcp://lsApiDevelopmentActiveMQ:61616  # Add ActiveMQ broker URL
- activemq:
+      - ACTIVE_MQ_BROKER_URL=tcp://activemq-lucassyroit:61616  # Add ActiveMQ broker URL
+ activemq-lucassyroit:
    image: webcenter/activemq:latest
    ports:
      - "61616:61616"
      - "8161:8161"
    environment:
-     ACTIVEMQ_NAME: lsApiDevelopmentActiveMQ
+     ACTIVEMQ_NAME: activemq-lucassyroit
      ACTIVEMQ_ADMIN_LOGIN: admin
      ACTIVEMQ_ADMIN_PASSWORD: admin
 
