--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
   volumes:
     - sqlite_pl_volume:/code/sqlitedb
   depends_on:
-    - activemq
+    - activemq-lucassyroit
   environment:
       - ACTIVE_MQ_BROKER_URL=tcp://activemq-lucassyroit:61616  # Add ActiveMQ broker URL
  activemq-lucassyroit:
