--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
   depends_on:
     - activemq-lucassyroit
   environment:
-      - ACTIVE_MQ_BROKER_URL=tcp://activemq-lucassyroit:61616  # Add ActiveMQ broker URL
+      - ACTIVE_MQ_BROKER_URL=tcp://activemq-lucassyroit:61616
  activemq-lucassyroit:
    image: webcenter/activemq:latest
    ports:
