--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,7 +19,13 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install uvicorn
           pip install pytest
+
+      - name: Start Uvicorn server
+        run: |
+          cd myproject
+          uvicorn main:app --host 0.0.0.0 --port 8000 & sleep 10
 
       - name: Run tests
         run: pytest test_main.py
