--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,6 +21,9 @@ jobs:
           pip install -r requirements.txt
           pip install uvicorn
           pip install pytest
+          pip install argon2_cffi
+          pip install python-jose[cryptography]
+          pip install python-multipart
 
       - name: Start Uvicorn server
         run: |
